# tomo-ndt

./: .gitignore  .readthedocs.yaml  README.md  Readme.md  mkdocs.yml  setup.cfg  setup.py
docs/: apis.md  index.md  license.md  requirements.txt
docs/scripts/: usage.ipynb
scripts/: deformations_example.ipynb  napari.ipynb  plotting_example.ipynb  processing_example.ipynb  projections_example.ipynb  scripting.ipynb  test_read.ipynb  viewing_example.ipynb  vmf_example.ipynb
tests/: helpers.py  test_000_init.py  test_010_x_v0.py  test_011_x_v1.py  test_02x_deforms.py  test_03x_project.py  test_04x_quantify.py
tomondt/: __init__.py  jupyter_plugins.py  operators.py  plugins.py  qt_plugins.py
tomondt/autosave/cage_minus_diff.zarr/: zarr.json
tomondt/autosave/cage_plus_diff.zarr/: zarr.json
tomondt/autosave/processed_cage_dip.zarr/: zarr.json
tomondt/autosave/processed_cage_sim.zarr/: zarr.json
tomondt/backends/qt/: layer_controllers.py
tomondt/core/: data_classes.py
tomondt/data/: __init__.py  voltime.py  volume.py
tomondt/depreciated/: operators.py  vmf.py
tomondt/depreciated/data/: __init__.py  voltime.py  volume.py
tomondt/depreciated/napari/: __init__.py  data_types.py  (+1 more)
tomondt/io/: __init__.py  ncdf.py  vmf.py  vmf2.py  zarr.py
tomondt/napari/: __init__.py  data_types.py  plugin_register.py
tomondt/operators_old/: __init__.py  bp.py  deform.py  evaluate.py  fp.py
tomondt/plugins/: __init__.py
tomondt/structs/: __init__.py  base.py  tiltseries.py  types.py
tomondt/utils/: __init__.py  context.py  output.py  utils.py
(+294 files in other folders)
