[metadata]
name = tomondt
version = 0.0.3
author = Tim Craig
author_email = tim.craig@uantwerpen.be
description = A convenient python library for working with dynamic (nd+time) electron tomography data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Tcraig088/tomo3dt
license = GPL3.0
classifier =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL3.0 License
    Operating System :: OS Independent
    Framework :: napari

[options]
packages = find:
include_package_data = True
install_requires =
    napari

